--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.0-next.1",
+    "@angular/cdk": "^9.0.1",
     "@angular/common": "~9.1.0-next.1",
     "@angular/compiler": "~9.1.0-next.1",
     "@angular/core": "~9.1.0-next.1",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.0-next.1",
     "@angular/platform-browser": "~9.1.0-next.1",
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@types/chart.js": "^2.9.14",
+    "angular-bootstrap-md": "^8.10.0",
+    "animate.css": "^3.7.2",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
