--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.0-rc.0",
-    "@angular/cli": "~9.1.0-next.0",
+    "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "~9.1.0-next.1",
     "@angular/language-service": "~9.1.0-next.1",
     "@types/jasmine": "~3.5.0",
