--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~9.1.0-next.1",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.0-next.1",
+    "@angular/material": "^9.0.1",
     "@angular/platform-browser": "~9.1.0-next.1",
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
