--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.1.0-next.1",
     "@angular/compiler": "~9.1.0-next.1",
     "@angular/core": "~9.1.0-next.1",
+    "@angular/fire": "^5.4.2",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.0-next.1",
     "@angular/material": "^9.0.1",
@@ -25,8 +26,10 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@types/chart.js": "^2.9.14",
     "angular-bootstrap-md": "^8.10.1",
+    "angularfire2": "^5.4.2",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
+    "firebase": "^7.13.1",
     "hammerjs": "^2.0.8",
     "ngx-countdown": "^9.0.0",
     "ngx-page-scroll": "^7.0.0",
