--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@types/chart.js": "^2.9.14",
     "angular-bootstrap-md": "^8.10.1",
     "angularfire2": "^5.4.2",
