--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@types/chart.js": "^2.9.14",
     "angular-bootstrap-md": "^8.10.1",
+    "angular-instafeed": "^1.8.3",
     "angularfire2": "^5.4.2",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
