--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@popperjs/core": "^2.4.4",
     "@types/chart.js": "^2.9.14",
     "angular-bootstrap-md": "^8.10.1",
     "angular-instafeed": "^1.8.3",
     "angularfire2": "^5.4.2",
     "animate.css": "^3.7.2",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.5.0",
     "date-fns": "^2.12.0",
     "firebase": "^7.14.1",
+    "firebaseui": "^4.5.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
     "ngx-countdown": "^9.0.0",
     "ngx-page-scroll": "^7.0.0",
     "ngx-page-scroll-core": "^7.0.0",
@@ -44,8 +48,8 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "@angular-devkit/build-angular": "^0.901.0-rc.0",
-    "@angular/cli": "^9.1.0",
+    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular/cli": "^9.1.10",
     "@angular/compiler-cli": "~9.1.0-next.1",
     "@angular/language-service": "~9.1.0-next.1",
     "@types/jasmine": "~3.5.0",
