--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.0-next.1",
+    "@angular/animations": "~10.0.5",
     "@angular/cdk": "^9.0.1",
-    "@angular/common": "~9.1.0-next.1",
-    "@angular/compiler": "~9.1.0-next.1",
-    "@angular/core": "~9.1.0-next.1",
+    "@angular/common": "~10.0.5",
+    "@angular/compiler": "~10.0.5",
+    "@angular/core": "~10.0.5",
     "@angular/fire": "^5.4.2",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~9.1.0-next.1",
+    "@angular/forms": "~10.0.5",
     "@angular/material": "^9.0.1",
-    "@angular/platform-browser": "~9.1.0-next.1",
-    "@angular/platform-browser-dynamic": "~9.1.0-next.1",
-    "@angular/router": "~9.1.0-next.1",
+    "@angular/platform-browser": "~10.0.5",
+    "@angular/platform-browser-dynamic": "~10.0.5",
+    "@angular/router": "~10.0.5",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -43,14 +43,14 @@
     "ngx-page-scroll-core": "^7.0.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
     "@angular-devkit/build-angular": "^0.1000.1",
     "@angular/cli": "^9.1.12",
-    "@angular/compiler-cli": "~9.1.0-next.1",
-    "@angular/language-service": "~9.1.0-next.1",
+    "@angular/compiler-cli": "~10.0.5",
+    "@angular/language-service": "~10.0.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -69,6 +69,6 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.9.7"
   }
 }
