--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "chart.js": "^2.9.3",
     "date-fns": "^2.12.0",
     "firebase": "^7.14.1",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.8.0",
     "firebaseui": "^4.5.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ngx-countdown": "^9.0.0",
     "ngx-page-scroll": "^7.0.0",
     "ngx-page-scroll-core": "^7.0.0",
+    "node": "^14.5.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
