--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebaseui": "^4.5.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "material-design-icons": "^3.0.1",
     "ngx-countdown": "^9.0.0",
     "ngx-page-scroll": "^7.0.0",
     "ngx-page-scroll-core": "^7.0.0",
