added text formatting features

--- a/angular.json
+++ b/angular.json
@@ -118,7 +118,8 @@
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.js",
-              "node_modules/hammerjs/hammer.min.js"
+              "node_modules/hammerjs/hammer.min.js",
+              "./node_modules/quill/dist/quill.js"
             ]
           }
         },
