--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "ngx-countdown": "^9.0.0",
     "ngx-page-scroll": "^7.0.0",
     "ngx-page-scroll-core": "^7.0.0",
+    "ngx-quill": "^12.0.1",
     "node": "^14.5.0",
-    "rxjs": "^6.5.5",
+    "quill": "^1.3.7",
+    "rxjs": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
