--- a/angular.json
+++ b/angular.json
@@ -114,6 +114,7 @@
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "node_modules/animate.css/animate.css",
+              "node_modules/@ctrl/ngx-emoji-mart/picker.css",
               "src/styles.css"
             ],
             "scripts": [
