--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
+    "ngx-bar-rating": "^1.1.0",
     "ngx-countdown": "^9.0.0",
     "ngx-page-scroll": "^7.0.0",
     "ngx-page-scroll-core": "^7.0.0",
