--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,21 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "firebase",
+              "@firebase/app",
+              "@firebase/database",
+              "@firebase/auth",
+              "@firebase/firestore",
+              "@firebase/functions",
+              "@firebase/performance",
+              "@firebase/remote-config",
+              "@firebase/component",
+              "angularfire2",
+              "angularfire2/auth",
+              "angularfire2/firestore"
+
+            ],
             "outputPath": "dist/ITBA-IEEE-Website-A9",
             "index": "src/index.html",
             "main": "src/main.ts",
