--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
     "ngx-bar-rating": "^1.1.0",
+    "ngx-cookie-service": "^12.0.3",
     "ngx-countdown": "^9.0.0",
     "ngx-owl-carousel-o": "^5.0.0",
     "ngx-page-scroll": "^7.0.0",
