--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "@types/chart.js": "^2.9.37",
     "angular-bootstrap-md": "^13.0.0",
     "angular-instafeed": "^1.8.3",
-    "angularfire2": "^5.4.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
-    "firebase": "^9.8.0",
+    "firebase": "9.7.0",
     "firebase-admin": "^10.2.0",
     "firebase-functions": "^3.21.0",
     "firebaseui": "^6.0.1",
