--- a/firebase.json
+++ b/firebase.json
@@ -2,47 +2,82 @@
   "database": {
     "rules": "database.rules.json"
   },
-  "hosting": {
-    "headers": [
-      {
-        "source": "/service-worker.js",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "no-cache"
-          }
-        ]
-      }
-    ],
-    "public": "dist/ITBA-IEEE-Website-A9",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "redirects": [
-      {
-        "source": "ieeeitba.web.app/**",
-        "destination": "ieeeitba.org.ar/**",
-        "type": 301
-      },
-      {
-        "source": "ieeeitba.firebaseapp.com/**",
-        "destination": "ieeeitba.org.ar/**",
-        "type": 301
-      }
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      },
-      {
-        "source": "/public/**",
-        "destination": "/public.html"
-      }
-    ]
-  },
+  "hosting": [
+    {
+      "headers": [
+        {
+          "source": "/service-worker.js",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "no-cache"
+            }
+          ]
+        }
+      ],
+      "public": "dist/ITBA-IEEE-Website-A9",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "redirects": [
+        {
+          "source": "ieeeitba.web.app/**",
+          "destination": "ieeeitba.org.ar/**",
+          "type": 301
+        },
+        {
+          "source": "ieeeitba.firebaseapp.com/**",
+          "destination": "ieeeitba.org.ar/**",
+          "type": 301
+        }
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        },
+        {
+          "source": "/public/**",
+          "destination": "/public.html"
+        }
+      ]
+    },
+    {
+      "target": "ITBA-IEEE-Website-A9",
+      "public": "dist/ITBA-IEEE-Website-A9",
+      "ignore": [
+        "**/.*"
+      ],
+      "headers": [
+        {
+          "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public,max-age=31536000,immutable"
+            }
+          ]
+        },
+        {
+          "source": "/@(ngsw-worker.js|ngsw.json)",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "no-cache"
+            }
+          ]
+        }
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    }
+  ],
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
@@ -56,15 +91,6 @@
     },
     "firestore": {
       "port": 8080
-    },
-    "database": {
-      "port": 9000
-    },
-    "hosting": {
-      "port": 5000
-    },
-    "storage": {
-      "port": 9199
     },
     "ui": {
       "enabled": true
