--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "ngx-bar-rating": "^1.1.0",
     "ngx-cookie-service": "^12.0.3",
     "ngx-countdown": "^9.0.0",
-    "ngx-owl-carousel-o": "^5.0.0",
     "ngx-page-scroll": "^7.0.0",
     "ngx-page-scroll-core": "^7.0.0",
     "ngx-quill": "^12.0.1",
     "node": "^14.5.0",
     "quill": "^1.3.7",
     "rxjs": "^6.6.2",
+    "swiper": "^6.8.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
