--- a/package.json
+++ b/package.json
@@ -11,50 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~10.0.5",
-    "@angular/compiler": "~10.0.5",
-    "@angular/core": "~10.0.5",
-    "@angular/fire": "^5.4.2",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~10.0.5",
-    "@angular/material": "^9.0.1",
-    "@angular/platform-browser": "~10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.5",
-    "@angular/router": "~10.0.5",
-    "@ctrl/ngx-emoji-mart": "^4.0.2",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^4.0.0",
+    "@angular/animations": "~16.1.5",
+    "@angular/cdk": "^16.1.5",
+    "@angular/common": "~16.1.5",
+    "@angular/compiler": "~16.1.5",
+    "@angular/core": "~16.1.5",
+    "@angular/fire": "^7.6.1",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "~16.1.5",
+    "@angular/material": "^16.1.5",
+    "@angular/platform-browser": "~16.1.5",
+    "@angular/platform-browser-dynamic": "~16.1.5",
+    "@angular/router": "~16.1.5",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.4.4",
     "@types/chart.js": "^2.9.14",
-    "angular-bootstrap-md": "^9.3.1",
+    "angular-bootstrap-md": "^15.0.0",
     "angular-instafeed": "^1.8.3",
     "angularfire2": "^5.4.2",
-    "animate.css": "^3.7.2",
-    "bootstrap": "^4.5.0",
-    "chart.js": "^2.9.3",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
     "date-fns": "^2.12.0",
-    "firebase": "^7.19.0",
-    "firebase-admin": "^9.0.0",
-    "firebase-functions": "^3.8.0",
-    "firebaseui": "^4.5.1",
+    "firebase": "^10.0.0",
+    "firebase-admin": "^11.10.1",
+    "firebase-functions": "^4.4.1",
+    "firebaseui": "^6.0.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
-    "ngx-bar-rating": "^1.1.0",
-    "ngx-cookie-service": "^12.0.3",
-    "ngx-countdown": "^9.0.0",
-    "ngx-page-scroll": "^7.0.0",
-    "ngx-page-scroll-core": "^7.0.0",
-    "ngx-quill": "^12.0.1",
-    "node": "^14.5.0",
+    "ngx-bar-rating": "^6.0.0",
+    "ngx-cookie-service": "^16.0.0",
+    "ngx-countdown": "^16.0.0",
+    "ngx-page-scroll": "^11.0.0",
+    "ngx-page-scroll-core": "^11.0.0",
+    "ngx-quill": "^22.0.0",
+    "node": "18.16.1",
     "quill": "^1.3.7",
-    "rxjs": "^6.6.2",
-    "swiper": "^6.8.4",
+    "rxjs": "^7.8.1",
+    "swiper": "^10.0.4",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
