--- a/angular.json
+++ b/angular.json
@@ -22,11 +22,7 @@
               "@firebase/functions",
               "@firebase/performance",
               "@firebase/remote-config",
-              "@firebase/component",
-              "angularfire2",
-              "angularfire2/auth",
-              "angularfire2/firestore"
-
+              "@firebase/component"
             ],
             "outputPath": "dist/ITBA-IEEE-Website-A9",
             "index": "src/index.html",
@@ -39,7 +35,6 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss",
               "node_modules/@fortawesome/fontawesome-free/scss/solid.scss",
               "node_modules/@fortawesome/fontawesome-free/scss/regular.scss",
@@ -47,8 +42,9 @@
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "node_modules/animate.css/animate.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/theme.scss"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.js",
@@ -69,7 +65,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -86,8 +81,17 @@
                   "maximumError": "18kb"
                 }
               ]
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -97,6 +101,9 @@
           "configurations": {
             "production": {
               "browserTarget": "ITBA-IEEE-Website-A9:build:production"
+            },
+            "development": {
+              "browserTarget": "ITBA-IEEE-Website-A9:build:development"
             }
           }
         },
@@ -171,7 +178,6 @@
       }
     }
   },
-  "defaultProject": "ITBA-IEEE-Website-A9",
   "cli": {
     "analytics": "11ac6a5a-096d-4463-a561-6d8cae8d4654"
   }
