--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "@types/chart.js": "^2.9.14",
     "angular-bootstrap-md": "^15.0.0",
     "angular-instafeed": "^1.8.3",
-    "angularfire2": "^5.4.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "date-fns": "^2.12.0",
-    "firebase": "^10.0.0",
     "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.4.1",
     "firebaseui": "^6.0.2",
@@ -52,34 +50,34 @@
     "node": "18.16.1",
     "quill": "^1.3.7",
     "rxjs": "^7.8.1",
-    "swiper": "^10.0.4",
+    "swiper": "8.4.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "^10.0.4",
-    "@angular/compiler-cli": "~10.0.5",
-    "@angular/language-service": "~10.0.5",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/architect": "^0.1601.4",
+    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular/cli": "^16.1.4",
+    "@angular/compiler-cli": "~16.1.5",
+    "@angular/language-service": "~16.1.5",
+    "@types/jasmine": "~4.3.5",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^20.4.2",
     "codelyzer": "^6.0.0",
-    "firebase-tools": "^7.16.1",
+    "firebase-tools": "^12.4.4",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "inquirer": "^9.2.8",
+    "inquirer-autocomplete-prompt": "^3.0.0",
+    "jasmine-core": "~5.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "^3.9.10"
+    "typescript": "^5.1.6"
   }
 }
