chore: add correct login image + corrected build config

--- a/angular.json
+++ b/angular.json
@@ -92,7 +92,7 @@
               "namedChunks": true
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -106,7 +106,8 @@
             "development": {
               "browserTarget": "ITBA-IEEE-Website-A9:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
