--- a/package.json
+++ b/package.json
@@ -57,14 +57,21 @@
   "devDependencies": {
     "@angular-devkit/architect": "^0.1601.4",
     "@angular-devkit/build-angular": "^16.1.4",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "~16.1.5",
     "@angular/language-service": "~16.1.5",
     "@types/jasmine": "~4.3.5",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^20.4.2",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "concurrently": "^8.2.0",
+    "eslint": "^8.33.0",
     "firebase-tools": "^12.4.4",
     "fuzzy": "^0.1.3",
     "inquirer": "^9.2.8",
@@ -78,7 +85,6 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.1",
-    "tslint": "~6.1.0",
     "typescript": "^5.1.6"
   }
 }
