--- a/package.json
+++ b/package.json
@@ -57,21 +57,21 @@
   "devDependencies": {
     "@angular-devkit/architect": "^0.1601.5",
     "@angular-devkit/build-angular": "^16.1.5",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
+    "@angular-eslint/builder": "16.1.0",
+    "@angular-eslint/eslint-plugin": "16.1.0",
+    "@angular-eslint/eslint-plugin-template": "16.1.0",
+    "@angular-eslint/schematics": "16.1.0",
+    "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "^16.1.5",
     "@angular/compiler-cli": "~16.1.6",
     "@angular/language-service": "~16.1.6",
     "@types/jasmine": "~4.3.5",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^20.4.2",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "concurrently": "^8.2.0",
-    "eslint": "^8.33.0",
+    "eslint": "^8.39.0",
     "firebase-tools": "^12.4.4",
     "fuzzy": "^0.1.3",
     "inquirer": "^9.2.8",
