chore: fix mobile styles for team cards and event page. Also linting in 4 spaces.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
             "type": "attribute"
           }
         ],
-        "@angular-eslint/no-empty-lifecycle-method": "off"
+        "@angular-eslint/no-empty-lifecycle-method": "off",
+          "indent": ["error", 4]
       }
     },
     {
