--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ngx-page-scroll": "^11.0.0",
     "ngx-page-scroll-core": "^11.0.0",
     "ngx-quill": "^22.0.0",
+    "ngx-skeleton-loader": "^8.1.0",
     "node": "18.16.1",
     "quill": "^1.3.7",
     "rxjs": "^7.8.1",
