chore: firebase deploy in github actions, pending secrets (#49)
* chore: firebase deploy in github actions, pending secrets

* chore: made non-secret values public and modified workflow files

---------

Co-authored-by: Fegrant <nicolasbirsa333@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,6 @@ testem.log
 .DS_Store
 Thumbs.db
 
-# Secrets
-src/app/secrets.ts
-
 # Firebase
 .firebase/
 .angular/
@@ -55,3 +52,8 @@ dump/
 mock_data/
 
 *.log
+
+.env.*
+.env
+
+!.env.template
