--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/common": "~16.1.6",
     "@angular/compiler": "~16.1.6",
     "@angular/core": "~16.1.6",
-    "@angular/fire": "^7.6.1",
+    "@angular/fire": "16.0.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "~16.1.6",
     "@angular/material": "^16.1.5",
