--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "ng": "ng",
     "dev": "concurrently \"firebase emulators:start --import mock_data --export-on-exit\" \"ng serve\"",
     "build": "ng build",
-      "dev-prod": "ng serve -c production",
+    "dev-prod": "ng serve -c production",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "scripts": "npx tsx scripts/main.ts"
   },
   "type": "module",
   "private": true,
@@ -37,7 +38,7 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "date-fns": "^2.12.0",
-    "firebase-admin": "^11.10.1",
+    "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.4.1",
     "firebaseui": "^6.0.2",
     "hammerjs": "^2.0.8",
