feat: nuevas clases para curso de data analysis de python

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,10 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true
-  }
+  },
+    "exclude": [
+        "node_modules",
+        "dist",
+        "e2e"
+    ]
 }
