--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     name: Build and Deploy
+    if: ${{ !startsWith(github.event.head_commit.message, '[no-deploy]') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
