chore: database dump scripts [skip ci]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
     "exclude": [
         "node_modules",
