--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.4.4",
     "@types/chart.js": "^2.9.14",
-    "@types/papaparse": "^5.3.16",
     "angular-bootstrap-md": "^15.0.0",
     "angular-instafeed": "^1.8.3",
     "animate.css": "^4.1.1",
@@ -52,10 +51,10 @@
     "ngx-image-compress": "^18.1.5",
     "ngx-page-scroll": "^11.0.0",
     "ngx-page-scroll-core": "^11.0.0",
+    "ngx-papaparse": "8",
     "ngx-quill": "^22.0.0",
     "ngx-skeleton-loader": "^8.1.0",
     "node": "18.16.1",
-    "papaparse": "^5.5.3",
     "quill": "^1.3.7",
     "rxjs": "^7.8.1",
     "swiper": "8.4.6",
