added predictions page

--- a/firebase.json
+++ b/firebase.json
@@ -45,7 +45,8 @@
   "emulators": {
     "singleProjectMode": false,
     "firestore": {
-      "port": 8080
+      "port": 8080,
+      "host": "localhost"
     },
     "ui": {
       "enabled": true,
