--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "angular-bootstrap-md": "^15.0.0",
     "angular-instafeed": "^1.8.3",
     "animate.css": "^4.1.1",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
+    "cheerio": "1.0.0-rc.12",
     "date-fns": "^2.12.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.4.1",
