--- a/firebase.json
+++ b/firebase.json
@@ -4,15 +4,7 @@
   },
   "hosting": {
     "headers": [
-      {
-        "source": "/service-worker.js",
-        "headers": [
-          {
-            "key": "Cache-Control",
-            "value": "no-cache"
-          }
-        ]
-      }
+      { "source":"/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}] }
     ],
     "public": "dist/ITBA-IEEE-Website-A9",
     "ignore": [
@@ -63,17 +55,6 @@
     "auth": {
       "port": 9099
     }
-  },
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "ignore": [
-        "venv",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log"
-      ]
-    }
-  ]
+  }
+
 }
